--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,39 @@ body {
   max-width: 1200px;
 }
 
+.nav-mobile {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
+}
+.nav-mobile .burger-ico {
+  padding: 0 30px;
+  font-size: 40px;
+  background: none;
+  color: black;
+  border: none;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+.nav-mobile .burger-ico:hover {
+  color: #09f;
+}
+.nav-mobile .fa-dice-d20 {
+  font-size: 45px;
+  color: #09f;
+}
+.nav-mobile a {
+  padding: 0 25px;
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s;
+}
+.nav-mobile a:hover {
+  color: #09f;
+}
+
 .nav-items {
   height: 80px;
   padding: 0 50px;
@@ -62,24 +95,8 @@ body {
   cursor: pointer;
 }
 
-.burger-ico {
-  display: block;
-  margin-right: auto;
-  padding: 0 30px;
-  line-height: 60px;
-  font-size: 30px;
-  background: none;
-  color: black;
-  border: none;
-  cursor: pointer;
-  transition: color 0.3s;
-}
-.burger-ico:hover {
-  color: #09f;
-}
-
-@media (min-width: 768px) {
-  .burger-ico {
+@media (min-width: 992px) {
+  .nav-mobile {
     display: none;
   }
   .nav-items {
