--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,45 @@ body {
 	max-width: 1200px;
 }
 
+.nav-mobile {
+	height: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 1px solid black;
+
+	.burger-ico {
+		padding: 0 30px;
+		font-size: 40px;
+		background: none;
+		color: black;
+		border: none;
+		cursor: pointer;
+		transition: color 0.3s;
+
+		&:hover {
+			color: #09f;
+		}
+	}
+
+	.fa-dice-d20 {
+		font-size: 45px;
+		color: #09f;
+	}
+
+	a {
+		padding: 0 25px;
+		text-decoration: none;
+		color: black;
+		transition: color 0.3s;
+
+		&:hover {
+			color: #09f;
+		}
+	}
+}
+
+
 .nav-items {
 	height: 80px;
 	padding: 0 50px;
@@ -69,25 +108,11 @@ body {
 	}
 }
 
-.burger-ico {
-	display: block;
-	margin-right: auto;
-	padding: 0 30px;
-	line-height: 60px;
-	font-size: 30px;
-	background: none;
-	color: black;
-	border: none;
-	cursor: pointer;
-	transition: color 0.3s;
 
-	&:hover {
-		color: #09f;
-	}
-}
 
-@media (min-width: 768px) {
-	.burger-ico {
+
+@media (min-width: 992px) {
+	.nav-mobile {
 		display: none;
 	}
 	.nav-items {
