--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,6 +18,11 @@ body {
 	max-width: 1200px;
 }
 
+.section-title {
+	padding: 30px 20px;
+	font-weight: 400;
+}
+
 .nav-items {
 	height: 80px;
 	display: flex;
@@ -97,12 +102,28 @@ body {
 .products {
 	height: 100vh;
 
-
-	.section-title {
-		padding: 30px 20px;
-		font-weight: 400;
+	.product-box {
+		max-width: 800px;
+		display: flex;
+		margin-left: 20px;
+		margin: 24px 0;
+		justify-content: space-around;
+		transition: all .5s;
+	
+		&:hover {
+			background-color: whitesmoke;
+		}
+	
+		img {
+			display: flex;
+			width: 82px;
+			height: 82px;
+			margin: 0 20px 0 10px;
+		}
 	}
 }
+
+
 
 @media (min-width: 992px) {
 	.nav-mobile {
