--- a/sass/style.scss
+++ b/sass/style.scss
@@ -107,18 +107,27 @@ body {
 		display: flex;
 		margin-left: 20px;
 		margin: 24px 0;
-		justify-content: space-around;
 		transition: all .5s;
-	
+
 		&:hover {
 			background-color: whitesmoke;
 		}
+
+		h3 {
+			font-size: 16px;
+		}
 	
 		img {
-			display: flex;
 			width: 82px;
 			height: 82px;
 			margin: 0 20px 0 10px;
+		}
+		
+		.product-item-box {
+			width: 700px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 		}
 	}
 }
