--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,12 @@ body {
 }
 .products .product-box:hover {
   background-color: whitesmoke;
+  border-radius: 8px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.085);
 }
 .products .product-box h3 {
   font-size: 16px;
+  margin-bottom: 10px;
 }
 .products .product-box img {
   width: 82px;
@@ -115,6 +118,9 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.products .product-box .product-item-date {
+  color: red;
 }
 
 @media (min-width: 992px) {
