--- a/sass/style.scss
+++ b/sass/style.scss
@@ -107,7 +107,7 @@ body {
 		display: flex;
 		margin-left: 20px;
 		margin: 24px 0;
-		transition: all .5s;
+		transition: all 0.5s;
 
 		&:hover {
 			background-color: whitesmoke;
@@ -119,13 +119,13 @@ body {
 			font-size: 16px;
 			margin-bottom: 10px;
 		}
-	
+
 		img {
 			width: 82px;
 			height: 82px;
 			margin: 0 20px 0 10px;
 		}
-		
+
 		.product-item-box {
 			width: 700px;
 			display: flex;
@@ -133,13 +133,26 @@ body {
 			align-items: center;
 		}
 
+		.vote-btn {
+			margin: 0 15px;
+			padding: 20px 10px;
+			font-size: 30px;
+			border: none;
+			border-radius: 8px;
+			background: none;
+			cursor: pointer;
+			transition: all 0.3s;
+
+			&:hover {
+				color: #09f;
+			}
+		}
+
 		.product-item-date {
 			color: red;
 		}
 	}
 }
-
-
 
 @media (min-width: 992px) {
 	.nav-mobile {
