--- a/sass/style.scss
+++ b/sass/style.scss
@@ -121,8 +121,9 @@ body {
 		}
 
 		img {
+			padding-top: 5px;
 			width: 82px;
-			height: 82px;
+			height: 86px;
 			margin: 0 20px 0 10px;
 		}
 
