--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
+  background-image: url("../img/background.jpg");
 }
 
 .wrapper {
@@ -83,7 +84,7 @@ body {
   transition: all 0.3s;
 }
 .nav-desktop .sign-up-btn:hover {
-  background-color: white;
+  background: none;
   border: 1px solid black;
   color: #09f;
   cursor: pointer;
@@ -134,6 +135,7 @@ body {
   color: #09f;
 }
 .products .product-box .product-item-date {
+  font-size: 12px;
   color: red;
 }
 
