--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@ html {
 
 body {
 	font-family: 'Inter', sans-serif;
+	background-image: url('../img/background.jpg');
 }
 
 .wrapper {
@@ -91,7 +92,7 @@ body {
 		transition: all 0.3s;
 
 		&:hover {
-			background-color: white;
+			background: none;
 			border: 1px solid black;
 			color: #09f;
 			cursor: pointer;
@@ -150,10 +151,12 @@ body {
 		}
 
 		.product-item-date {
+			font-size: 12px;
 			color: red;
 		}
 	}
 }
+
 
 @media (min-width: 992px) {
 	.nav-mobile {
