--- a/sass/style.scss
+++ b/sass/style.scss
@@ -157,8 +157,59 @@ body {
 	}
 }
 
-// rejestracja
 
+.registration-page {
+	width: 360px;
+	padding: 8% 0 0;
+	margin: auto;
+
+	.form {
+		background: #ffffff;
+		max-width: 360px;
+		margin: 0 auto 100px;
+		padding: 45px;
+		text-align: center;
+		box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+
+		input {
+			outline: none;
+			background: #f2f2f2;
+			width: 100%;
+			border: none;
+			margin: 0 0 15px;
+			padding: 15px;
+			font-size: 14px;
+		}
+
+		button {
+			text-transform: uppercase;
+			width: 100%;
+			border: none;
+			padding: 15px;
+			color: #ffffff;
+			font-size: 14px;
+			cursor: pointer;
+			background-color: #09f;
+			transition: all 0.3s;
+
+			&:hover {
+				background-color: rgb(0, 115, 255);
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+			}
+		}
+
+		.message {
+			margin: 15px 0 0;
+			color: #b3b3b3;
+			font-size: 12px;
+
+			a {
+				color: black;
+				text-decoration: none;
+			}
+		}
+	}
+}
 
 
 @media (min-width: 992px) {
