--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,9 @@ body {
   color: black;
   text-decoration: none;
 }
+.registration-page .form .login-form {
+  display: none;
+}
 
 @media (min-width: 992px) {
   .nav-mobile {
