feat: add function to change login form

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ body {
   color: black;
   text-decoration: none;
 }
-.registration-page .form .login-form {
+.registration-page .form .disabled {
   display: none;
 }
 
