--- a/sass/style.scss
+++ b/sass/style.scss
@@ -198,11 +198,12 @@ body {
 		}
 
 		.message {
-			margin: 15px 0 0;
+			margin: 20px 0 0;
 			color: #b3b3b3;
 			font-size: 12px;
 
 			a {
+				font-size: 14px;
 				color: black;
 				text-decoration: none;
 			}
