--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,38 @@ body {
   display: none;
 }
 
+.aboutus {
+  text-align: center;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  height: 80px;
+  border-top: 1px solid black;
+}
+footer .footer-info {
+  position: relative;
+  top: 26px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer .footer-info .icon {
+  padding: 0 20px;
+  font-size: 24px;
+}
+footer .footer-info .icon i {
+  padding: 0 8px;
+  color: #09f;
+  transition: transform 0.3s;
+}
+footer .footer-info .icon i:hover {
+  transform: scale(1.2);
+}
+
 @media (min-width: 992px) {
   .nav-mobile {
     display: none;
