--- a/css/style.css
+++ b/css/style.css
@@ -198,16 +198,18 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100vw;
-  height: 80px;
+  height: 60px;
   border-top: 1px solid black;
+  background-color: rgba(34, 30, 30, 0.173);
 }
 footer .footer-info {
   position: relative;
-  top: 26px;
+  top: 16px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 14px;
 }
 footer .footer-info .icon {
   padding: 0 20px;
