--- a/sass/style.scss
+++ b/sass/style.scss
@@ -223,16 +223,18 @@ footer {
 	position: absolute;
 	bottom: 0;
 	width: 100vw;
-	height: 80px;
+	height: 60px;
 	border-top: 1px solid black;
+	background-color: rgba(34, 30, 30, 0.173);
 
 	.footer-info {
 		position: relative;
-		top: 26px;
+		top: 16px;
 		text-align: center;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		font-size: 14px;
 
 		.icon {
 			padding: 0 20px;
