--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,30 @@ body {
   color: #09f;
 }
 
+.nav-mobile-list {
+  position: absolute;
+  padding: 50px;
+  height: 100vh;
+  width: 100vw;
+  left: -100vw;
+  background-image: url("../img/background.jpg");
+  transition: transform 0.3s;
+}
+.nav-mobile-list a {
+  display: block;
+  font-size: 20px;
+  padding: 20px;
+  color: black;
+  text-decoration: none;
+}
+.nav-mobile-list a:hover {
+  font-weight: bold;
+}
+
+.active-nav-link {
+  transform: translateX(100vw);
+}
+
 .nav-desktop {
   display: none;
 }
