--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ body {
 }
 .products .product-box .vote-btn {
   margin: 0 15px;
-  padding: 20px 10px;
+  padding: 15px 10px;
   font-size: 30px;
   border: none;
   border-radius: 8px;
@@ -157,6 +157,10 @@ body {
 }
 .products .product-box .vote-btn:hover {
   color: #09f;
+}
+.products .product-box .number-of-votes {
+  text-align: center;
+  margin-bottom: 10px;
 }
 .products .product-box .product-item-date {
   font-size: 12px;
