--- a/sass/style.scss
+++ b/sass/style.scss
@@ -163,7 +163,7 @@ body {
 
 		.vote-btn {
 			margin: 0 15px;
-			padding: 20px 10px;
+			padding: 15px 10px;
 			font-size: 30px;
 			border: none;
 			border-radius: 8px;
@@ -174,6 +174,12 @@ body {
 			&:hover {
 				color: #09f;
 			}
+		}
+
+		.number-of-votes {
+			text-align: center;
+			margin-bottom: 10px;
+
 		}
 
 		.product-item-date {
