--- a/css/style.css
+++ b/css/style.css
@@ -29,32 +29,32 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #000000;
 }
 .nav-items a {
   padding: 0 25px;
   text-decoration: none;
-  color: black;
+  color: #000000;
   transition: color 0.3s;
 }
 .nav-items a:hover {
-  color: #09f;
+  color: #0099ff;
 }
 .nav-items .logo-ico {
   font-size: 45px;
-  color: #09f;
+  color: #0099ff;
 }
 .nav-items .burger-ico {
   padding: 0 30px;
   font-size: 36px;
   background: none;
-  color: black;
+  color: #000000;
   border: none;
   cursor: pointer;
   transition: color 0.3s;
 }
 .nav-items .burger-ico:hover {
-  color: #09f;
+  color: #0099ff;
 }
 
 .nav-mobile-list {
@@ -70,7 +70,7 @@ body {
   display: block;
   font-size: 20px;
   padding: 20px;
-  color: black;
+  color: #000000;
   text-decoration: none;
 }
 .nav-mobile-list a:hover {
@@ -102,15 +102,15 @@ body {
   width: 120px;
   margin-right: 50px;
   font-size: 16px;
-  background-color: #09f;
-  border: 1px solid #09f;
+  background-color: #0099ff;
+  border: 1px solid #0099ff;
   border-radius: 8px;
   transition: all 0.3s;
 }
 .nav-desktop .sign-up-btn:hover {
   background: none;
-  border: 1px solid black;
-  color: #09f;
+  border: 1px solid #000000;
+  color: #0099ff;
   cursor: pointer;
 }
 
@@ -125,7 +125,7 @@ body {
   transition: all 0.5s;
 }
 .products .product-box:hover {
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.085);
 }
@@ -156,7 +156,7 @@ body {
   transition: all 0.3s;
 }
 .products .product-box .vote-btn:hover {
-  color: #09f;
+  color: #0099ff;
 }
 .products .product-box .number-of-votes {
   text-align: center;
@@ -164,7 +164,7 @@ body {
 }
 .products .product-box .product-item-date {
   font-size: 12px;
-  color: red;
+  color: #0099ff;
 }
 
 .registration-page {
@@ -197,11 +197,11 @@ body {
   color: #ffffff;
   font-size: 14px;
   cursor: pointer;
-  background-color: #09f;
+  background-color: #0099ff;
   transition: all 0.3s;
 }
 .registration-page .form button:hover {
-  background-color: rgb(0, 115, 255);
+  background-color: #0073ff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 .registration-page .form .message {
@@ -211,7 +211,7 @@ body {
 }
 .registration-page .form .message a {
   font-size: 14px;
-  color: black;
+  color: #000000;
   text-decoration: none;
 }
 .registration-page .form .disabled {
@@ -227,7 +227,7 @@ footer {
   bottom: 0;
   width: 100vw;
   height: 60px;
-  border-top: 1px solid black;
+  border-top: 1px solid #000000;
   background-color: rgba(34, 30, 30, 0.173);
 }
 footer .footer-info {
@@ -245,7 +245,7 @@ footer .footer-info .icon {
 }
 footer .footer-info .icon i {
   padding: 0 8px;
-  color: #09f;
+  color: #0099ff;
   transition: transform 0.3s;
 }
 footer .footer-info .icon i:hover {
