--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
+@use './colors' as colors;
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -29,35 +31,35 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid colors.$black;
 
 	a {
 		padding: 0 25px;
 		text-decoration: none;
-		color: black;
+		color: colors.$black;
 		transition: color 0.3s;
 
 		&:hover {
-			color: #09f;
+			color: colors.$main-color;
 		}
 	}
 
 	.logo-ico {
 		font-size: 45px;
-		color: #09f;
+		color: colors.$main-color;
 	}
 
 	.burger-ico {
 		padding: 0 30px;
 		font-size: 36px;
 		background: none;
-		color: black;
+		color: colors.$black;
 		border: none;
 		cursor: pointer;
 		transition: color 0.3s;
 
 		&:hover {
-			color: #09f;
+			color: colors.$main-color;
 		}
 	}
 }
@@ -75,7 +77,7 @@ body {
 		display: block;
 		font-size: 20px;
 		padding: 20px;
-		color: black;
+		color: colors.$black;
 		text-decoration: none;
 
 		&:hover {
@@ -101,8 +103,8 @@ body {
 
 		input {
 			height: 35px;
-			background-color: rgba(0, 0, 0, 0.057);
-			border: 1px solid rgba(0, 0, 0, 0.141);
+			background-color: rgba(colors.$black, 0.057);
+			border: 1px solid rgba(colors.$black, 0.141);
 			border-radius: 8px;
 		}
 	}
@@ -112,15 +114,15 @@ body {
 		width: 120px;
 		margin-right: 50px;
 		font-size: 16px;
-		background-color: #09f;
-		border: 1px solid #09f;
+		background-color: colors.$main-color;
+		border: 1px solid colors.$main-color;
 		border-radius: 8px;
 		transition: all 0.3s;
 
 		&:hover {
 			background: none;
-			border: 1px solid black;
-			color: #09f;
+			border: 1px solid colors.$black;
+			color: colors.$main-color;
 			cursor: pointer;
 		}
 	}
@@ -137,9 +139,9 @@ body {
 		transition: all 0.5s;
 
 		&:hover {
-			background-color: whitesmoke;
+			background-color: #f5f5f5;
 			border-radius: 8px;
-			box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.085);
+			box-shadow: 10px 10px 10px rgba(colors.$black, 0.085);
 		}
 
 		h3 {
@@ -172,19 +174,18 @@ body {
 			transition: all 0.3s;
 
 			&:hover {
-				color: #09f;
+				color: colors.$main-color;
 			}
 		}
 
 		.number-of-votes {
 			text-align: center;
 			margin-bottom: 10px;
-
 		}
 
 		.product-item-date {
 			font-size: 12px;
-			color: red;
+			color: colors.$main-color;
 		}
 	}
 }
@@ -195,12 +196,12 @@ body {
 	margin: auto;
 
 	.form {
-		background: #ffffff;
+		background: colors.$white;
 		max-width: 360px;
 		margin: 0 auto 100px;
 		padding: 45px;
 		text-align: center;
-		box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+		box-shadow: 0 0 20px 0 rgba(colors.$black, 0.2), 0 5px 5px 0 rgba(colors.$black, 0.24);
 
 		input {
 			outline: none;
@@ -217,26 +218,26 @@ body {
 			width: 100%;
 			border: none;
 			padding: 15px;
-			color: #ffffff;
+			color: colors.$white;
 			font-size: 14px;
 			cursor: pointer;
-			background-color: #09f;
+			background-color: colors.$main-color;
 			transition: all 0.3s;
 
 			&:hover {
-				background-color: rgb(0, 115, 255);
-				box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+				background-color: #0073ff;
+				box-shadow: 0 0 10px rgba(colors.$black, 0.4);
 			}
 		}
 
 		.message {
 			margin: 20px 0 0;
-			color: #b3b3b3;
+			color: colors.$gray;
 			font-size: 12px;
 
 			a {
 				font-size: 14px;
-				color: black;
+				color: colors.$black;
 				text-decoration: none;
 			}
 		}
@@ -256,7 +257,7 @@ footer {
 	bottom: 0;
 	width: 100vw;
 	height: 60px;
-	border-top: 1px solid black;
+	border-top: 1px solid colors.$black;
 	background-color: rgba(34, 30, 30, 0.173);
 
 	.footer-info {
@@ -274,7 +275,7 @@ footer {
 
 			i {
 				padding: 0 8px;
-				color: #09f;
+				color: colors.$main-color;
 				transition: transform 0.3s;
 
 				&:hover {
