--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,7 +101,7 @@ body {
 			margin: 0 20px;
 		}
 
-		input {
+		.input-search {
 			height: 35px;
 			background-color: rgba(colors.$black, 0.057);
 			border: 1px solid rgba(colors.$black, 0.141);
@@ -144,12 +144,12 @@ body {
 			box-shadow: 10px 10px 10px rgba(colors.$black, 0.085);
 		}
 
-		h3 {
+		.product-title {
 			font-size: 16px;
 			margin-bottom: 10px;
 		}
 
-		img {
+		.item-photo {
 			padding-top: 5px;
 			width: 82px;
 			height: 86px;
@@ -201,9 +201,11 @@ body {
 		margin: 0 auto 100px;
 		padding: 45px;
 		text-align: center;
-		box-shadow: 0 0 20px 0 rgba(colors.$black, 0.2), 0 5px 5px 0 rgba(colors.$black, 0.24);
+		box-shadow: 0 0 20px 0 rgba(colors.$black, 0.2),
+			0 5px 5px 0 rgba(colors.$black, 0.24);
 
-		input {
+		.register-input,
+		.login-input {
 			outline: none;
 			background: #f2f2f2;
 			width: 100%;
@@ -213,7 +215,7 @@ body {
 			font-size: 14px;
 		}
 
-		button {
+		.register-btn {
 			text-transform: uppercase;
 			width: 100%;
 			border: none;
@@ -235,7 +237,8 @@ body {
 			color: colors.$gray;
 			font-size: 12px;
 
-			a {
+			.register-msg,
+			.login-msg {
 				font-size: 14px;
 				color: colors.$black;
 				text-decoration: none;
@@ -252,7 +255,7 @@ body {
 	text-align: center;
 }
 
-footer {
+.footer {
 	position: absolute;
 	bottom: 0;
 	width: 100vw;
